--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.80MB/s(Youtube:不良林), server: 213.183.59.214, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇨🇳 中国-6.05MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-878.5KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
-  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.253, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-1.73MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-422.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.57MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-470.5KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: 185.167.116.253, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.253, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林), server: 185.167.116.253, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.253, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.253, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-878.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-739.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
