--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-720.8KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-179.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇳 中国-498.6KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-152.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-206.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇳🇱 荷兰-216.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇨🇳 中国-11.39MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林), server: 213.183.53.207, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 中国-355.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇳🇱 荷兰-233.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇨🇳 中国-469.7KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-791.1KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-248.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇫🇷 法国-389.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-152.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-248.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-389.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
